First story added to story selection
