# backend/src/main/java/org/borg/backend/story/controller/StoryController.java
@@ -3,7 +3,7 @@ package org.borg.backend.story.controller;
 
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
-import org.borg.backend.story.model.Story;
+import org.borg.backend.story.dto.StoryDTO;
 import org.borg.backend.story.service.StoryService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -21,7 +21,7 @@ public class StoryController {
     private final StoryService storyService;
 
     @GetMapping("/all")
-    public ResponseEntity<List<Story>> getAllStories() {
+    public ResponseEntity<List<StoryDTO>> getAllStories() {
         return ResponseEntity.ok().body(storyService.getAllStories());
     }
 }
